# Assignmnet4

./: readme.md
AIRFLOW_DAG/: docker-compose.yaml
AIRFLOW_DAG/dags/Assignmnet4/: embed_pipeline.py
Diagrams/: diagram.ipynb  diagrams.py
code/APPLICATION/: .gitignore  Dockerfile.fastapi  Dockerfile.streamlit  app.py  docker-compose.yml  pyproject.toml  streamlit.py
code/research-tool/: codelab_template.html  export_handler.py  main.py  pyproject.toml  streamlit_app.py
