[tool.poetry]
name = "docuq"
version = "0.1.0"
description = "DocuQ: RAG, Web Search and Arxiv Research Agents"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
python-dotenv = "^1.0.0"
streamlit = "^1.30.0"
boto3 = "^1.34.0"
requests = "^2.31.0"
pinecone-client = "^3.0.0"
openai = "^1.0.0"
snowflake-connector-python = "^3.6.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
bcrypt = "^4.1.0"
google-search-results = "^2.4.2"
sentence-transformers = "^2.2.2"
arxiv = "^2.0.0"
reportlab = "^4.0.0"
nltk = "^3.8.1"
python-multipart = "^0.0.6"
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"