[tool.poetry]
name = "research-tool"
version = "0.1.0"
description = "Research Tool with Streamlit and FastAPI"
authors = ["Sriram"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
streamlit = "^1.30.0"
snowflake-connector-python = "^3.6.0"
bcrypt = "^4.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
requests = "^2.31.0"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"